# Arbitrage-Research-Tool

./: LEGAL.md  LICENSE  NOTICE  README.md  config.toml  main.py  pyproject.toml  requirements.txt
Formula/: arb-tool.rb
arb_tool/: __init__.py  cli.py
marketing/: instagram-story.html
src/: models.py
src/apis/: binance.py  coinbase.py  kalshi.py  kraken.py  manifold.py  metaculus.py  polymarket.py  predictit.py
src/core/: arbitrage.py  backtest.py  config.py  history.py  matcher.py
src/ui/: app.py  arb_tab.py  backtest_tab.py  crypto_tab.py  edge_tab.py
